# language-flipper

./: .gitignore  CMakeLists.txt  README.md  app_icon.rc  config.cpp  config.h  config.json  main.cpp  utils.cpp  utils.h
res/: confing_readme.md
tests/: compile_check.cpp  math_tests.cpp
